# SAWIT_DESKTOP_LITE

./: .gitignore  Modelfile  README.md  SawitApp.desktop  config.json  install.sh  pyproject-v1.toml  pyproject.mac.toml  pyproject.rpi.toml  pyproject.toml  requirements.txt  run.sh  sawit_app.spec  sawitapp.service  tf-luna.py  uninstall.sh
docs/: launchapp.md
hooks/: hook-cv2.py
logs/: data.json
models/general_ncnn_model/: metadata.yaml  model_ncnn.py
models/largetreev1_ncnn_model/: metadata.yaml
models/small_tree_ncnn_model/: metadata.yaml
models/smalltreev1_ncnn_model/: metadata.yaml  model_ncnn.py
script/: download.py
src/: debug.py  main.py
src/configs/: colors.py  config.json  config_manager.py
src/controller/: gdrive.py  lidar.py  loader.py  serial.py  tfluna.py  upgrade.py  yolo.py  yolo_detector.py  yolo_thread.py
src/enums/: log.py  mcu.py
src/services/: ollama_service.py  tools.py
src/ui/: alert.py  button.py  chat_bubble.py  dropdown.py  feature_button.py  input.py  modal.py  navigation.py  styles.py
src/utils/: format.py  icon.py  logger.py  opencv.py  path.py  serial.py
src/views/: dashboard.py  home.py  inference.py  initialize.py  location.py  logger.py  main.py  setting.py  splash.py  troubleshooting.py  upgrade.py
test/: depth_camera.py  gps.py  main.py  serial_test.py  test.py  test_port.py  tf-luna.py
