[project]
name = "desktop-app"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "numpy<2",
    "ncnn>=1.0.20250916",
    "opencv-python>=4.11.0.86",
    "pyserial>=3.5",
    "ultralytics>=8.3.229",

    # MAC gunakan PyQt5
    "pyqt5>=5.15.11; sys_platform == 'darwin'",
    "pyqt5-qt5==5.15.18; sys_platform == 'darwin'",

    # Raspberry Pi gunakan PySide6
    "pyside6>=6.7.0; sys_platform == 'linux' and platform_machine == 'aarch64'",

    # ---- TORCH PER PLATFORM ----
    # MAC Intel (x86_64)
    "torch==2.0.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",

    # MAC ARM (arm64)
    "torch==2.9.1; sys_platform == 'darwin' and platform_machine == 'arm64'",

    # Raspberry Pi (Linux ARM64)
    "torch==2.2.2; sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[dependency-groups]
dev = ["pyinstaller>=6.16.0"]
