[project]
name = "desktop-app"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "numpy<2",
    "pyserial>=3.5",
    "opencv-python>=4.10.0.84",
    "ultralytics>=8.3.229",

    # === MacOS (UV) pakai PyQt5 ===
    "pyqt5>=5.15.11; sys_platform == 'darwin'",

    # Pytorch per platform
    "torch==2.0.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch==2.9.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torch==2.2.2; sys_platform == 'linux' and platform_machine == 'aarch64'",
]
