[project]
name = "desktop-app"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "numpy<2",
    "pyserial>=3.5",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.229",
    # ==== MacOS ====
    "pyqt5>=5.15.11; sys_platform == 'darwin'",
    "pyqt5-qt5==5.15.18; sys_platform == 'darwin'",
    # ==== Raspberry Pi ====
    # Tidak pakai PyQt5 pip — pakai APT (lebih stabil)
    # opsional: jika mau pakai PySide6 di Pi
    # "pyside6>=6.7.0; sys_platform == 'linux' and platform_machine == 'aarch64'",
    # ==== PyTorch ====
    "torch==2.0.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch==2.9.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torch==2.2.2; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "gdown>=5.2.0",
    "pynmea2>=1.19.0",
    "pyqtwebengine>=5.15.7",
    "ollama>=0.6.1",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
